# PyImpact-Insight

./: .env.example  .gitignore  AGENTS.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/analyzers/: __init__.py  coverage_loader.py  git_diff.py  impact_propagation.py  impact_scoring.py  python_ast_parser.py  python_scanner.py  recommendation_engine.py
backend/app/api/: __init__.py  routes.py  schemas.py
backend/app/core/: config.py  errors.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/repositories/: __init__.py  analysis_artifact_repository.py  analysis_repository.py  change_repository.py  impact_repository.py  repository_repository.py
backend/app/services/: __init__.py  analysis_service.py  repository_service.py
backend/tests/: api_client.py  conftest.py  test_health.py  test_repository_analysis_api.py
docs/: PROJECT_SPEC.md
docs/ADR/: 0001-v1-scope-and-contracts.md  0002-p1-persistence-and-analysis-status.md  0003-p2-python-ast-symbol-extraction.md  0004-p3-git-diff-and-changed-symbol-mapping.md  0005-p4-baseline-impact-propagation.md  0006-p5-impact-scoring-and-finalization.md  0007-p6-tests-coverage-and-recommendation.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AnalysisForm.tsx  ImpactsTable.tsx  RecentAnalysisList.tsx  ReportPanel.tsx  RepositoryForm.tsx  StatusBadge.tsx  SummaryPanel.tsx  TestRecommendationsTable.tsx
frontend/src/pages/: WorkbenchPage.tsx
