[project]
name = "b-impact-backend"
version = "0.1.0"
description = "FastAPI backend skeleton for a Python repository change-impact analyzer."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "pydantic>=2.7,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<0.31",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
